--- a/index.html
+++ b/index.html
@@ -58,8 +58,11 @@
                 <img src="_img/Gemini_language_model_logo (1).png" alt="Pulse Candy">
             </div>
             <div class="container1">
+                <a href="https://chandan-gpt-pro.vercel.app/">
+                    <button>Click Here To Use Pro Version!! </button> 
+                   &nbsp;
          <a href="https://chandan-ai.000webhostapp.com/chandan.html">
-            <button>Click Here To Use !! </button>
+            <button>Click Here To Use Chat Version!! </button>
         </a>
             </div>
             <div class="gradient">
