--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
             </div>
             <div class="container1">
                 <a href="https://chandan-gpt-pro.vercel.app/">
-                    <button>Click Here To Use Pro Version!! </button> 
+                    <button>Click Here To Use Pro Version</button> 
                    &nbsp;
          <a href="https://chandan-ai.000webhostapp.com/chandan.html">
-            <button>Click Here To Use Chat Version!! </button>
+            <button>Click Here To Use Chat Version</button>
         </a>
             </div>
             <div class="gradient">
