--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
             </div>
             <div class="container1">
                 
-         <a href="https://chandan-ai.000webhostapp.com/chandan.html">
-            <button>Click Here To Use PRO!</button>
+         <a href="https://chandan-gpt-pro.vercel.app/l">
+            <button>Click Here To Use PRO Version!</button>
         </a>
         <a href="https://chandan-ai.000webhostapp.com/chandan.html">
-            <button>Click Here To Chat </button>
+            <button>Click Here To Chat Version </button>
         </a>
             </div>
             <div class="gradient">
