--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </div>
             <div class="container1">
                 
-         <a href="https://chandan-gpt-pro.vercel.app/l">
+         <a href="https://chandangpt-pro.netlify.app/">
             <button>Click Here To Use PRO Version!</button>
         </a>
         <a href="https://chandan-ai.000webhostapp.com/chandan.html">
