--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
          <a href="https://chandangpt-pro.netlify.app/">
             <button>Click Here To Use PRO Version!</button>
         </a>
-        <a href="https://chandan-ai.000webhostapp.com/chandan.html">
+        <a href="https://chandan-gpt-beta.vercel.app/">
             <button>Click Here To Chat Version </button>
         </a>
             </div>
