--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
             </div>
             <div class="container1">
                 
-         <a href="https://chandangpt-pro.netlify.app/">
+<!--          <a href="https://chandangpt-pro.netlify.app/">
             <button>Click Here To Use PRO Version!</button>
-        </a>
-        <a href="https://chandan-gpt-beta.vercel.app/">
+        </a> -->
+        <a href="https://saichandan181.github.io/ChandanGPT-beta/">
             <button>Click Here To Chat Version </button>
         </a>
             </div>
