--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
 <!--          <a href="https://chandangpt-pro.netlify.app/">
             <button>Click Here To Use PRO Version!</button>
         </a> -->
+         <a href="https://chandangpt-pro.netlify.app/">
+            <button>Click Here To Use PRO Version!</button>
+        </a>
+        
         <a href="https://saichandan181.github.io/ChandanGPT-beta/">
             <button>Click Here To Chat Version </button>
         </a>
